# trkdbg

./: .gitmodules  CMakeLists.txt  build_dpkg.sh  build_msvc_win32.bat  build_msvc_win64.bat  build_msvc_winxp.bat  build_win_generic.cmd  global.h  trkdbg_source.pro
console_source/: console_source.pro  main_console.cpp
doc/: debugger_reference_analysis.md
gui_source/: dialogabout.cpp  dialogabout.h  dialogabout.ui  dialogoptions.cpp  dialogoptions.h  dialogoptions.ui  gui_source.pro  guimainwindow.cpp  guimainwindow.h  guimainwindow.ui  main_gui.cpp
res/: license.txt  readme.txt  resource.rc
res/linux/: trkdbg.desktop.in
res/windows/: resource.rc  resource_icon.rc
src/: CMakeLists.txt  global.h
src/cli/: CMakeLists.txt  main_console.cpp
src/console/: CMakeLists.txt
src/gui/: CMakeLists.txt  dialogabout.cpp  dialogabout.h  dialogoptions.cpp  dialogoptions.h  guimainwindow.cpp  guimainwindow.h  guimainwindow.ui  main_gui.cpp
